Fix slider track and thumb mismatch on Firefox

--- a/src/goupile/client/form.css
+++ b/src/goupile/client/form.css
@@ -394,8 +394,8 @@ html:not(.small) .fm_widget.compact .fm_error {
     width: 100%;
     height: 8px;
     background: white;
-    background-image: linear-gradient(90deg, #555 var(--webkit_progress),
-                                             white var(--webkit_progress));
+    background-image: linear-gradient(90deg, #555 var(--progress),
+                                             white var(--progress));
     border: 1px solid #dfdfdf;
     border-width: 0.5px;
     border-radius: 4px;
@@ -404,14 +404,9 @@ html:not(.small) .fm_widget.compact .fm_error {
     width: 100%;
     height: 6px;
     background: white;
+    background-image: linear-gradient(90deg, #555 var(--progress),
+                                             white var(--progress));
     border: 1px solid #dfdfdf;
-    border-width: 0.5px;
-    border-radius: 4px;
-}
-.fm_slider:not(.missing) input::-moz-range-progress {
-    height: 6px;
-    background-color: #555;
-    border: 1px solid #555;
     border-width: 0.5px;
     border-radius: 4px;
 }
